--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/mocha": "^10.0.6",
     "@types/react": "18.2.77",
     "chai": "^4.3.10",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.0",
     "hardhat": "^2.18.0",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.5",
