--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
     "@types/react": "18.2.77",
+    "autoprefixer": "^10.4.19",
     "chai": "^4.3.10",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.0",
     "hardhat": "^2.18.0",
     "hardhat-gas-reporter": "^1.0.9",
+    "postcss": "^8.4.38",
     "solidity-coverage": "^0.8.5",
+    "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
     "typescript": "^5.3.3"
